--- a/Android Studio Project/EmergencyHelper/app/build.gradle
+++ b/Android Studio Project/EmergencyHelper/app/build.gradle
@@ -25,3 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
