--- a/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -27,7 +28,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="@string/google_maps_key_SEU-NOME" />
 
         <activity android:name=".view.MainActivity">
             <intent-filter>
