--- a/Android Studio Project/EmergencyHelper/app/build.gradle
+++ b/Android Studio Project/EmergencyHelper/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.google.firebase:firebase-storage:9.0.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
