Implementado view de descrição do hopital marcado (Obs.: necessita de ser adaptado para o Mature Design) Uso do picasso para obter imagem. Implementar método para realizar ligação para o hospital Implementar marker personalizado para os hospitais.

--- a/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
@@ -49,6 +49,7 @@
         </activity>
         <activity android:name=".view.MapsActivity" />
         <activity android:name=".view.TelefonesUteisActivity" />
+        <activity android:name=".view.HospitalDescriptionActivity"></activity>
     </application>
 
 </manifest>
