Iniciada a implementação do layout que mostra detalhes de um hospital

--- a/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.TelefonesUteisActivity" android:theme="@style/TelefonesUteisTheme" />
+        <activity android:name=".view.TelefonesUteisActivity" />
 
         <activity android:name=".view.HospitalDescriptionActivity"></activity>
     </application>
