--- a/Android Studio Project/EmergencyHelper/app/build.gradle
+++ b/Android Studio Project/EmergencyHelper/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "app.com.bugdroidbuilder.paulo.emergencyhelper"
@@ -25,9 +25,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:palette-v7:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
+
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.google.firebase:firebase-storage:9.0.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
