--- a/Android Studio Project/EmergencyHelper/app/build.gradle
+++ b/Android Studio Project/EmergencyHelper/app/build.gradle
@@ -32,10 +32,9 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.0.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
 
 }
