--- a/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/AndroidManifest.xml
@@ -30,18 +30,19 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key_paulo_desktop" />
+            android:value="@string/google_maps_key_julianny" />
 
-        <activity android:name=".controller.MapsActivity">
+        <activity android:name=".controller.activity.MapsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.TelefonesUteisActivity" />
-        <activity android:name=".controller.HospitalDescriptionActivity" />
-        <activity android:name=".controller.NavigateActivity"></activity>
+        <activity android:name=".controller.activity.TelefonesUteisActivity" />
+        <activity android:name=".controller.activity.HospitalDescriptionActivity" />
+        <activity android:name=".controller.activity.NavigateActivity" />
+        <activity android:name=".controller.activity.SobreActivity"></activity>
     </application>
 
 </manifest>
